Translations & docker image fix

--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -49,6 +49,20 @@
           <context context-type="linenumber">7</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="a4759399c88a36c6d1af4848aca9c13219f5cc4c" datatype="html">
+        <source>No result</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/crop-select/crop-select.component.html</context>
+          <context context-type="linenumber">25</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="11ef097171e45e0bb3d986b8fd53a8e1ff0e59bd" datatype="html">
+        <source>Click here to create a new crop</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/crop-select/crop-select.component.html</context>
+          <context context-type="linenumber">26</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="3071dc53bcfb77802e359696474ac6f3b900615e" datatype="html">
         <source>Crop</source>
         <context-group purpose="location">
@@ -57,6 +71,10 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
           <context context-type="linenumber">15</context>
         </context-group>
       </trans-unit>
@@ -70,6 +88,10 @@
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">31</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">30</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="23d77d9654a45d898ed812cf5527d5ffdf2d93b7" datatype="html">
         <source>Bed preparation</source>
@@ -80,6 +102,10 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">213</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">197</context>
         </context-group>
       </trans-unit>
       <trans-unit id="eae02405c5e21a49e271f4f367c604c9f0685084" datatype="html">
@@ -99,6 +125,10 @@
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">172</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">158</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="770738fdc5b8904cc7c51e2dcfc528b8c9ae6a80" datatype="html">
         <source>Transplantation</source>
@@ -109,6 +139,10 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">198</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">183</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4d6cca9d917ec9b9998c50be50a8290a521223b8" datatype="html">
@@ -198,6 +232,18 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">244</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">74</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">175</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">227</context>
         </context-group>
       </trans-unit>
       <trans-unit id="f8f51dbca86503147f210f042fa054fdde91f236" datatype="html">
@@ -865,8 +911,8 @@
           <context context-type="linenumber">32</context>
         </context-group>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">82</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">87</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
@@ -880,8 +926,8 @@
           <context context-type="linenumber">37</context>
         </context-group>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">87</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">92</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
@@ -898,15 +944,15 @@
       <trans-unit id="ad5f9d990cb907def0aa5298ab599139cfbc5241" datatype="html">
         <source>Crop edition</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="sourcefile">app/crop/new-crop-route/new-crop-route.component.html</context>
           <context context-type="linenumber">3</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6f3aae5b3d3e62432b92e670b0370f87ad2e5fa1" datatype="html">
         <source>FAO query</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">11</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">7</context>
         </context-group>
       </trans-unit>
       <trans-unit id="29ee9cda8e54cd01ef19e927328224388bd6b611" datatype="html">
@@ -915,50 +961,50 @@
           Pay extra care with accents that must be correctly provided in the query.
         </source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">19</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">17</context>
         </context-group>
       </trans-unit>
       <trans-unit id="bc155f9fc3be3f32083f19b2c77d4ad3b696d9b9" datatype="html">
         <source>Display name</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">28</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
       <trans-unit id="e64b7c7f0ef9c0a6adc7fe4f6b304c108026b5ee" datatype="html">
         <source>Family</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
           <context context-type="linenumber">37</context>
         </context-group>
       </trans-unit>
       <trans-unit id="ec2b122ed8617f51ed128267a65711e40e56b5bc" datatype="html">
         <source>Species</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">48</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">49</context>
         </context-group>
       </trans-unit>
       <trans-unit id="cea6340f2b598e900ce1b49c9c419707a62bdfaf" datatype="html">
         <source>Subspecies</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">59</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">61</context>
         </context-group>
       </trans-unit>
       <trans-unit id="776759b84c70b0a9962e60960dcbc518d8a3d677" datatype="html">
         <source>Cultivar</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/new-crop-form/new-crop-form.component.html</context>
-          <context context-type="linenumber">68</context>
+          <context context-type="sourcefile">app/shared/new-crop-form/new-crop-form.component.html</context>
+          <context context-type="linenumber">71</context>
         </context-group>
       </trans-unit>
       <trans-unit id="99ee4faa69cd2ea8e3678c1f557c0ff1f05aae46" datatype="html">
         <source>Clear</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/crop/agrovoc-plant-product-tuple-select/agrovoc-plant-product-tuple-select.component.html</context>
-          <context context-type="linenumber">28</context>
+          <context context-type="sourcefile">app/shared/agrovoc-plant-product-tuple-select/agrovoc-plant-product-tuple-select.component.html</context>
+          <context context-type="linenumber">30</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5b4ae32727ee5fcb5aadff6db67ddc80241b204b" datatype="html">
@@ -974,12 +1020,20 @@
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">52</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">48</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="25b8e31789c80c7295cf898bf36b8693921c378e" datatype="html">
         <source>Germination</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">67</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">62</context>
         </context-group>
       </trans-unit>
       <trans-unit id="b52b46f649bbfb5cc201cfa96663e8842139266f" datatype="html">
@@ -995,12 +1049,20 @@
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">107</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">93</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="634c70dd660be0df340cdd05334a5563b44ad0cf" datatype="html">
         <source>days after sowing</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">119</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">105</context>
         </context-group>
       </trans-unit>
       <trans-unit id="525e47cb3ca307fb2c1154e7a32c08c24aabb225" datatype="html">
@@ -1009,12 +1071,20 @@
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">137</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">121</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="75d24362cc9c79bf4c7d62916d32739b3c08911a" datatype="html">
         <source>days after first harvest</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">149</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">133</context>
         </context-group>
       </trans-unit>
       <trans-unit id="a02ea1d4e7424ca989929da5e598f379940fdbf2" datatype="html">
@@ -1027,12 +1097,24 @@
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">233</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">164</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">216</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="f61c6867295f3b53d23557021f2f4e0aa1d0b8fc" datatype="html">
         <source>Type</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/culture/culture-form/culture-form.component.html</context>
           <context context-type="linenumber">218</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/shared/culture-steps-form/culture-steps-form.component.html</context>
+          <context context-type="linenumber">202</context>
         </context-group>
       </trans-unit>
       <trans-unit id="f1f34b2b98e28c61eb19746f6e855a52e411ed23" datatype="html">
